# mediasafe

./: ARCHITECTURE.md  DESIGN.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js.timestamp-1730919781901-c8bc9737b8eee.mjs
.github/: tauri.yaml
.github/workflows/: landing-page-docker.yml  publish.yaml  release.yml  rust.yml  signaling-server-docker.yml  signaling-server-test.yml  test.yml
api/: bruno.json  new-device.bru
landing-page/: Dockerfile  docker-compose.yml  index.html  package.json  robots.txt  server.js  sitemap.xml  style.css
landing-page/data/: waitlist.csv
scripts/: pre-commit
signaling-server/: Cargo.toml  Dockerfile  docker-compose.yml
signaling-server/src/: main.rs
src/: App.vue  main.js  styles.css
src-tauri/: .gitignore  Cargo.toml  format.py  tauri.conf.json  test_ffmpeg.rs  test_warp.rs
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  database.rs  device.rs  directory.rs  face_detector.rs  file.rs  lib.rs  main.rs  ml.rs  server.rs  test.rs  transport.rs
src-tauri/tests/: database.sql
src/com/: Devices.js
src/components/: Connect.vue  Device.vue  DeviceList.vue  FolderPicker.vue  Greet.vue  Image.vue  Map.vue  People.vue  PhotoViewer.vue  Photos.vue  RailItem.vue  Setting.vue
src/utils/: videoProcessor.js
