[package]
name = "mediasafe"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mediasafe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webrtc = { rev = "5aa49c0", git = "https://github.com/webrtc-rs/webrtc" }
jwalk = "0.8.1"
image-base64 = "0.1.0"
rustc-serialize = "0.3.24"
rusqlite = { version = "0.29.0", features = ["bundled"] }
clippy = "0.0.302"
rand = "0.8.5"
#tch = "0.14.0"
anyhow = "1.0.70"
image = "0.24.6"
lazy_static = "1.4.0"
kamadak-exif = "0.5.5"
oxipng = "8.0.0"
# tokio = { version = "1", features = ["full"] }
warp = "0.3"
openssl = { version = "0.10.35", features = ["vendored"] }
image_compressor = "1.5.2"
fast_image_resize = "4.2.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
