[package]
name = "mediasafe"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mediasafe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webrtc = { rev = "5aa49c0", git = "https://github.com/webrtc-rs/webrtc" }
jwalk = "0.8.1"
image-base64 = "0.1.0"
rustc-serialize = "0.3.24"
rusqlite = { version = "0.29.0", features = ["bundled"] }
clippy = "0.0.302"
rand = "0.8.5"
#tch = "0.14.0"
anyhow = "1.0.70"
image = "0.24.6"
lazy_static = "1.4.0"
kamadak-exif = "0.5.5"
oxipng = "8.0.0"
# tokio = { version = "1", features = ["full"] }
warp = "0.3"
image_compressor = "1.5.2"
fast_image_resize = "4.2.1"
tauri-plugin-os = "2"
get_if_addrs = "0.5.3"
#tch = "0.7.0"
yaml-rust = "0.4.5"
thumbnailer = "0.5.1"
mime = "0.3.17"
tauri-plugin-fs = "2"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-dialog = "2"
base64 = "0.22.1"
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
ndarray = "0.17.2"
reqwest = { version = "0.13.2", features = ["stream"] }
tokio = "1.49.0"
bytes = "1.11.1"
crossbeam-channel = "0.5.15"
tokenizers = "0.19.1"

